added some features(2nd)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Bootstrap 3</title>
+    <title>Queue Management</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/font.min.css" />
     <link rel="stylesheet" href="css/main.css" />
@@ -28,6 +28,16 @@
             <div class="form-check">
               <input type="checkbox" class="form-check-input" id="checkOld" />
               <label class="form-check-label" for="checkOld">Old</label>
+            </div>
+            <div class="form-check">
+              <input
+                type="checkbox"
+                class="form-check-input"
+                id="checkEmergency"
+              />
+              <label class="form-check-label" for="checkEmergency"
+                >Emergency</label
+              >
             </div>
             <button type="submit" id="submit" class="btn btn-default">
               Submit
