--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
   <body>
     <div class="container">
       <div class="row">
+        <div class="col-md-12">
+          <h3 class="countClient"></h3>
+        </div>
+      </div>
+      <div class="row">
         <div class="col-md-6 col-offset-1">
           <form action="" onsubmit="handleSubmit()">
             <div class="form-group">
