solving nodeList not found(6th)

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   </head>
   <body>
     <div class="container">
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-md-12">
           <div id="news">
-            সিরিয়ালের জন্য ০১৮********* নাম্বারে সকাল ৮.০০-৮.৩০ মিনিট এর মধ্যে
+            সিরিয়ালের জন্য ০১৮******** নাম্বারে সকাল ৮ থেকে ৮.৩০ মিনিট এর মধ্যে
             যোগাযোগ করবেন।
           </div>
         </div>
-      </div>
+      </div> -->
       <div class="row">
         <div class="col-md-12">
           <h3 class="countClient"></h3>
@@ -34,7 +34,7 @@
               <input
                 type="text"
                 class="form-control"
-                placeholder="Enter name..."
+                placeholder="নাম লিখুন এখানে..."
                 id="name"
                 name="name"
                 required
@@ -42,7 +42,7 @@
             </div>
             <div class="form-check">
               <input type="checkbox" class="form-check-input" id="checkOld" />
-              <label class="form-check-label" for="checkOld">Old</label>
+              <label class="form-check-label" for="checkOld">পুরাতন রোগী</label>
             </div>
             <div class="form-check">
               <input
@@ -51,11 +51,11 @@
                 id="checkEmergency"
               />
               <label class="form-check-label" for="checkEmergency"
-                >Emergency</label
+                >ইমারজেন্সি রোগী</label
               >
             </div>
             <button type="submit" id="submit" class="btn btn-default">
-              Submit
+              সাবমিট করুন
             </button>
           </form>
         </div>
@@ -67,6 +67,11 @@
             <ul id="ulList" class="list-group"></ul>
           </div>
         </div>
+        <!-- <div class="col-md-6">
+          <div class="next">
+            <h1>hello from next patient</h1>
+          </div>
+        </div> -->
       </div>
     </div>
 
